--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.1",
+    "react-router-active-component": "^4.0.0-rc.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
