Adds browserHistory for clean URLs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fighter of walkers",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "author": "DoSomething.org",
   "license": "MIT",
