--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.4",
     "if-env": "^1.0.0",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^15.0.1",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "react-router-active-component": "^4.0.0-rc.0"
